--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,5 @@ Ezra Nobrega    <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Kabeer Akanni   <akannikabeer@gmail.com>
 Ayomide Suara   <aysuarex@gmail.com>
+Benedict Igbukolu <benedictigbukolu@gmail.com>
+Daniel Izevbije   <dizevbije94@gmail.com>
